--- a/Bootstrap5/index.html
+++ b/Bootstrap5/index.html
@@ -15,19 +15,16 @@
 </head>
 <body>
 <div class="container py-5">
-  <!-- Exercise 1.1 -->
   <section>
     <h2 class="section-title">HTML with Bootstrap</h2>
     <div class="alert alert-info">Bootstrap linked via CDN</div>
   </section>
 
-  <!-- Exercise 1.2 -->
   <section>
     <h2 class="section-title">Bootstrap Setup</h2>
     <p><code>bootstrap.min.css</code> and <code>bootstrap.bundle.min.js</code></p>
   </section>
 
-  <!-- Exercise 2.1 -->
   <section>
     <h2 class="section-title">Bootstrap Folder Structure</h2>
     <ul>
@@ -37,13 +34,11 @@
     </ul>
   </section>
 
-  <!-- Exercise 2.2 -->
   <section>
     <h2 class="section-title">Bootstrap JS Plugin</h2>
     <p><code>bootstrap.bundle.min.js</code> includes Popper for dropdowns/tooltips.</p>
   </section>
 
-  <!-- Exercise 3.1 -->
   <section>
     <h2 class="section-title">Responsive Grid Layout</h2>
     <div class="container">
@@ -55,7 +50,6 @@
     </div>
   </section>
 
-  <!-- Exercise 3.2 -->
   <section>
     <h2 class="section-title">Container, Row, Column</h2>
     <div class="container">
@@ -66,7 +60,6 @@
     </div>
   </section>
 
-  <!-- Exercise 4.1 -->
   <section>
     <h2 class="section-title">Two-Column Layout</h2>
     <div class="row">
@@ -75,7 +68,6 @@
     </div>
   </section>
 
-  <!-- Exercise 4.2 -->
   <section>
     <h2 class="section-title">Four Equal Columns</h2>
     <div class="row">
@@ -86,7 +78,6 @@
     </div>
   </section>
 
-  <!-- Exercise 5.1 -->
   <section>
     <h2 class="section-title">Centered Content</h2>
     <div class="row justify-content-center align-items-center" style="height: 200px;">
@@ -94,7 +85,6 @@
     </div>
   </section>
 
-  <!-- Exercise 5.2 -->
   <section>
     <h2 class="section-title">Column Reordering</h2>
     <div class="row">
@@ -103,7 +93,6 @@
     </div>
   </section>
 
-  <!-- Exercise 6.1 -->
   <section>
     <h2 class="section-title">Responsive Navbar with Flex</h2>
     <nav class="d-flex flex-column flex-md-row bg-light p-3">
@@ -113,7 +102,6 @@
     </nav>
   </section>
 
-  <!-- Exercise 6.2 -->
   <section>
     <h2 class="section-title">Card with Flex Alignment</h2>
     <div class="card d-flex justify-content-between align-items-center p-3">
@@ -122,7 +110,6 @@
     </div>
   </section>
 
-  <!-- Exercise 7.1 -->
   <section>
     <h2 class="section-title">Typography Utilities</h2>
     <h1 class="display-1">Display Heading</h1>
@@ -131,7 +118,6 @@
     <p class="fw-bold">Bold text</p>
   </section>
 
-  <!-- Exercise 7.2 -->
   <section>
     <h2 class="section-title">Text Transform</h2>
     <p class="text-uppercase">uppercase text</p>
@@ -139,7 +125,6 @@
     <p class="text-capitalize">capitalize each word</p>
   </section>
 
-  <!-- Exercise 8.1 -->
   <section>
     <h2 class="section-title">Registration Form</h2>
     <form>
@@ -162,7 +147,6 @@
     </form>
   </section>
 
-  <!-- Exercise 8.2 -->
   <section>
     <h2 class="section-title">Floating Login Form</h2>
     <form>
@@ -177,7 +161,6 @@
     </form>
   </section>
 
-  <!-- Exercise 9.1 -->
   <section>
     <h2 class="section-title">Buttons</h2>
     <button class="btn btn-primary">Primary</button>
@@ -185,7 +168,6 @@
     <button class="btn btn-outline-success">Outline</button>
   </section>
 
-  <!-- Exercise 9.2 -->
   <section>
     <h2 class="section-title">Button Groups</h2>
     <div class="btn-group" role="group">
@@ -196,7 +178,6 @@
     </div>
   </section>
 
-  <!-- Exercise 10.1 -->
   <section>
     <h2 class="section-title">Responsive Navbar</h2>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -219,7 +200,6 @@
     </nav>
   </section>
 
-  <!-- Exercise 10.2 -->
   <section>
     <h2 class="section-title">Tabs and Pills</h2>
     <ul class="nav nav-tabs">
@@ -240,7 +220,6 @@
     </ul>
   </section>
 
-  <!-- Exercise 11.1 -->
   <section>
     <h2 class="section-title">Profile Card</h2>
     <div class="card" style="width: 18rem;">
@@ -252,7 +231,6 @@
     </div>
   </section>
 
-  <!-- Exercise 11.2 -->
   <section>
     <h2 class="section-title">Media Object</h2>
     <div class="d-flex">
@@ -264,14 +242,12 @@
     </div>
   </section>
 
-  <!-- Exercise 12.1 -->
   <section>
     <h2 class="section-title">Spacing Utilities</h2>
     <div class="m-3 p-2 bg-light">Margin 3, Padding 2</div>
     <div class="mt-4 py-5 bg-info text-white">Top Margin 4, Vertical Padding 5</div>
   </section>
 
-  <!-- Exercise 12.2 -->
   <section>
     <h2 class="section-title">Pricing Layout</h2>
     <div class="row text-center">
@@ -280,38 +256,32 @@
     </div>
   </section>
 
-  <!-- Exercise 13.1 -->
   <section class="custom-section bg-warning text-white">
     <h2 class="section-title">Dashboard</h2>
     <p class="text-primary">This is a warning section with primary colored text.</p>
   </section>
 
-  <!-- Exercise 13.2 -->
   <section class="custom-section bg-dark bg-gradient text-white">
     <h2 class="section-title">Gradient Background</h2>
     <p>This section uses a dark background with a gradient and white text.</p>
   </section>
 
-  <!-- Exercise 14.1 -->
   <section class="custom-section">
     <h2 class="section-title">Display and Visibility</h2>
     <div class="d-none d-md-block">Visible from medium devices and above (md+)</div>
     <div class="d-lg-flex">Visible as flex on large devices and above (lg+)</div>
   </section>
 
-  <!-- Exercise 14.2 -->
   <aside class="d-none d-md-block bg-light p-3">
     <h2 class="section-title">Responsive Sidebar</h2>
     <p>This sidebar is visible only on tablets (md) and larger screens.</p>
   </aside>
 
-  <!-- Exercise 15.1 -->
   <div class="custom-section text-center">
     <h2 class="section-title">Borders and Rounded Circle</h2>
     <img src="https://via.placeholder.com/100" class="border border-primary border-3 rounded-circle" alt="Profile Image">
   </div>
 
-  <!-- Exercise 15.2 -->
   <div class="card shadow-lg rounded-pill m-3">
     <div class="card-body">
       <h2 class="section-title">Shadow and Rounded Pill</h2>
@@ -319,20 +289,17 @@
     </div>
   </div>
 
-  <!-- Exercise 16.1 -->
   <footer class="position-fixed bottom-0 w-100 text-center custom-footer bg-light border-top">
     <h2 class="section-title">Fixed Footer</h2>
     <p>This footer stays fixed at the bottom of the viewport.</p>
   </footer>
 
-  <!-- Exercise 16.2 -->
   <div class="position-relative m-3">
     <h2 class="section-title">Position Absolute Badge</h2>
     <img src="https://via.placeholder.com/150" class="img-fluid" alt="Image with badge">
     <span class="badge bg-danger positioned-badge">New</span>
   </div>
 
-  <!-- Exercise 17.1 -->
   <footer class="text-center p-3">
     <h2 class="section-title">Social Media Icons</h2>
     <a href="#" class="text-primary m-2"><i class="bi bi-facebook" aria-label="Facebook"></i></a>
@@ -340,14 +307,12 @@
     <a href="#" class="text-danger m-2"><i class="bi bi-instagram" aria-label="Instagram"></i></a>
   </footer>
 
-  <!-- Exercise 17.2 -->
   <div class="text-center mb-4">
     <h2 class="section-title">Icon-Only Buttons</h2>
     <button class="btn btn-outline-primary" aria-label="Home"><i class="bi bi-house"></i></button>
     <button class="btn btn-outline-success" aria-label="Check"><i class="bi bi-check-circle"></i></button>
   </div>
 
-  <!-- Exercise 18.1 -->
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
     Launch Modal
   </button>
@@ -369,7 +334,6 @@
     </div>
   </div>
 
-  <!-- Exercise 18.2 -->
   <div class="accordion m-3" id="accordionExample">
     <h2 class="section-title">Collapsible Accordion</h2>
     <div class="accordion-item">
@@ -382,5 +346,8 @@
         <div class="accordion-body">
           This is the first item's accordion body.
         </div>
-    </body>
+    </div>
+  </section>
+</div>
+</body>
 </html>
