--- a/CSS3/index.html
+++ b/CSS3/index.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Local Community Event Portal</title>
+    <title>CSS3</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-    <h1>Welcome to the Local Community Event Portal</h1>
-
     <header id="mainHeader">
         <h2>Upcoming Events</h2>
         <nav>
